[package]
name = "engine-2d"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
glam = "0.30.3"
hecs = "0.10.5"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
rapier2d = { version = "0.26.0", features = ["simd-stable"] }
rodio = "0.20.1"
wgpu = "25.0.0"
winit = "0.30.11"
